fix sidebar look and behaviour on mobile

--- a/static/css/extra.css
+++ b/static/css/extra.css
@@ -13,7 +13,9 @@
 }
 
 .docs-sidebar {
-  min-width: 20vw;
+  /* width: 20vw; */
+  /* max-width: 400px; */
+  min-width: 300px;
 }
 
 .docs-content {
